--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.egogoal</groupId>
-  <artifactId>ws-xfire-xml01</artifactId>
+  <artifactId>ws-cxf-xml03</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>ws-xfire-xml01 Maven Webapp</name>
+  <name>ws-cxf-xml03 Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
   <dependency>
@@ -87,6 +87,6 @@
 			</configuration>
 		</plugin>
 	</plugins>
-    <finalName>ws-xfire-xml01</finalName>
+    <finalName>ws-cxf-xml03</finalName>
   </build>
 </project>
